welcome page aesthetics

--- a/Girl Code/Info.plist
+++ b/Girl Code/Info.plist
@@ -2,6 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Cerebri Sans Italic.ttf</string>
+		<string>Cerebri Sans Bold Italic.ttf</string>
+		<string>Cerebri Sans Bold.ttf</string>
+		<string>Cerebri Sans Book Italic.ttf</string>
+		<string>Cerebri Sans Book.ttf</string>
+		<string>Cerebri Sans SemiBold.ttf</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
